# Lab_MS

./: .gitignore
Lab2_MC/: CMakeLists.txt
Lab2_MC/src/: main  main.cpp
Lab2_MC/src/include/: runge_kutta.h
Lab2_MC/src/runge_kutta/: runge_kutta.cpp
Lab3_MC/: CMakeLists.txt
Lab3_MC/src/: main.cpp  mura_machine.cpp
Lab3_MC/src/include/: mura_machine.h
Lab4_MC/: CMakeLists.txt
Lab4_MC/src/: main.cpp
Lab5_MC/: CMakeLists.txt
Lab5_MC/src/: main  main.cpp
Lab5_MC/src/include/: markov_process_ds_ct.h  runge_kutta.h
Lab5_MC/src/markov_process_ds_ct/: markov_process_ds_ct.cpp
Lab5_MC/src/runge_kutta/: runge_kutta.cpp
Lab6_MC/src/: main  main.cpp
